--- a/sass/mm-theme/template-parts/_banner-website-moved.scss
+++ b/sass/mm-theme/template-parts/_banner-website-moved.scss
@@ -36,6 +36,11 @@
       text-align: right;
       text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
       margin-right: 8px;
+
+      &:hover {
+        color: #fff;
+        text-decoration: underline;
+      }
     }
 
     &__icon {
