build: update dependencies

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -548,7 +548,7 @@ label > .label-body {
 # FontAwesome
 --------------------------------------------------------------*/
 /*!
- * Font Awesome Free 5.13.0 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 5.13.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 .fa,
@@ -1026,6 +1026,12 @@ readers do not read off random characters that represent icons */
 
 .fa-bacon:before {
   content: "\f7e5"; }
+
+.fa-bacteria:before {
+  content: "\f959"; }
+
+.fa-bacterium:before {
+  content: "\f95a"; }
 
 .fa-bahai:before {
   content: "\f666"; }
@@ -1804,6 +1810,9 @@ readers do not read off random characters that represent icons */
 .fa-deaf:before {
   content: "\f2a4"; }
 
+.fa-deezer:before {
+  content: "\f977"; }
+
 .fa-delicious:before {
   content: "\f1a5"; }
 
@@ -1986,6 +1995,9 @@ readers do not read off random characters that represent icons */
 
 .fa-edge:before {
   content: "\f282"; }
+
+.fa-edge-legacy:before {
+  content: "\f978"; }
 
 .fa-edit:before {
   content: "\f044"; }
@@ -2478,6 +2490,9 @@ readers do not read off random characters that represent icons */
 
 .fa-google-drive:before {
   content: "\f3aa"; }
+
+.fa-google-pay:before {
+  content: "\f979"; }
 
 .fa-google-play:before {
   content: "\f3ab"; }
@@ -3901,6 +3916,9 @@ readers do not read off random characters that represent icons */
 .fa-rupee-sign:before {
   content: "\f156"; }
 
+.fa-rust:before {
+  content: "\f97a"; }
+
 .fa-sad-cry:before {
   content: "\f5b3"; }
 
@@ -4056,6 +4074,9 @@ readers do not read off random characters that represent icons */
 
 .fa-simplybuilt:before {
   content: "\f215"; }
+
+.fa-sink:before {
+  content: "\f96d"; }
 
 .fa-sistrix:before {
   content: "\f3ee"; }
@@ -4543,6 +4564,9 @@ readers do not read off random characters that represent icons */
 .fa-ticket-alt:before {
   content: "\f3ff"; }
 
+.fa-tiktok:before {
+  content: "\f97b"; }
+
 .fa-times:before {
   content: "\f00d"; }
 
@@ -4729,6 +4753,9 @@ readers do not read off random characters that represent icons */
 .fa-unlock-alt:before {
   content: "\f13e"; }
 
+.fa-unsplash:before {
+  content: "\f97c"; }
+
 .fa-untappd:before {
   content: "\f405"; }
 
@@ -4818,6 +4845,9 @@ readers do not read off random characters that represent icons */
 
 .fa-users-cog:before {
   content: "\f509"; }
+
+.fa-users-slash:before {
+  content: "\f973"; }
 
 .fa-usps:before {
   content: "\f7e1"; }
@@ -5108,7 +5138,7 @@ readers do not read off random characters that represent icons */
   width: auto; }
 
 /*!
- * Font Awesome Free 5.13.0 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 5.13.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 @font-face {
@@ -5140,7 +5170,7 @@ readers do not read off random characters that represent icons */
   font-weight: 900; }
 
 /*!
- * Font Awesome Free 5.13.0 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 5.13.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 @font-face {
@@ -6957,11 +6987,15 @@ div.wpcf7-mail-sent-ok {
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
     text-align: center; }
     .ie-banner .browser-logo img {
-      width: 88px;
-      height: auto; }
+      width: 10vw;
+      height: auto;
+      align-self: center; }
+      @media (min-width: 1000px) {
+        .ie-banner .browser-logo img {
+          width: 88px;
+          height: auto; } }
 
 /*--------------------------------------------------------------
 # Footer
