feature: add animations

--- a/sass/mm-theme/template-parts/_banner-website-moved.scss
+++ b/sass/mm-theme/template-parts/_banner-website-moved.scss
@@ -2,19 +2,16 @@
 # Banner Website Moved
 --------------------------------------------------------------*/
 
-#toast {
+.website-moved {
   background: #fcfcfc;
   width: 100%;
   position: fixed;
   bottom: 0;
   z-index: 99;
   box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2);
-  display: none;
-}
-
-.website-moved {
-  min-height: 160px;
   z-index: 99;
+  transition: all 0.2s ease-in-out;
+  display: none;
 
   .dismiss {
     display: flex;
