--- a/sass/mm-theme/template-parts/_banner-ie.scss
+++ b/sass/mm-theme/template-parts/_banner-ie.scss
@@ -5,7 +5,7 @@
 .ie-banner {
   background-color: #333333;
   padding: 22px 0;
-  // display: none;
+  display: none;
 
   .ie-container {
     display: flex;
