--- a/sass/mm-theme/template-parts/_content-page.scss
+++ b/sass/mm-theme/template-parts/_content-page.scss
@@ -2,3 +2,21 @@
 # Content Page
 --------------------------------------------------------------*/
 
+.post-password-form {
+//   p label input[type="password"] {
+//     background: #ffffff !important;
+//     border: 1px solid #0a73b7;
+//     border-radius: 25px;
+//     font-weight: 800;
+//     font-size: 1.5rem;
+//     color: #29abff;
+//     margin-right: 8px;
+//     width: 100%;
+//   }
+
+//   p {
+//     > input[type="submit"] {
+//       @extend .btn-general;
+//     }
+//   }
+}
