--- a/sass/style.scss
+++ b/sass/style.scss
@@ -119,10 +119,10 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 /*--------------------------------------------------------------
 # Template Parts
 --------------------------------------------------------------*/
-// @import 'mm-theme/template-parts/content-page';
 @import 'mm-theme/template-parts/banner-covid19';
 @import 'mm-theme/template-parts/banner-website-moved';
 @import 'mm-theme/template-parts/banner-ie';
+@import 'mm-theme/template-parts/content-page';
 
 /*--------------------------------------------------------------
 # Footer
