--- a/sass/mm-theme/mixins/_cards.scss
+++ b/sass/mm-theme/mixins/_cards.scss
@@ -29,6 +29,9 @@
     &__header {
       line-height: 0;
       border-bottom: 12px solid $secondaryColor;
+      width: 100%;
+      height: 220px;
+
       img {
         width: 100%;
         height: 220px;
@@ -106,4 +109,14 @@ video {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.compat-object-fit {
+  background-size: cover;
+  background-position: center center;
+
+  img {
+    // hide image if object fit is not supported - opacity to 0 for the link area
+    opacity: 0;
+  }
 }
